Unity/Assets/akanevrc/TeuchiUdon/Tests/src/Funcs/Func3.teuchi
// error
f = (g : func[unit, int]) -> g();
g = () -> f(() -> 100);
UnityEngine.Debug.Log(f(g));
